--- a/k8s/helm/templates/ratings-service.yaml
+++ b/k8s/helm/templates/ratings-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookinfo-dev-ratings
-  namespace: student21-bookinfo-dev
+  name: {{ .Release.Name }}
+  namespace: {{.Values.ratings.namespace}}
 spec:
   type: ClusterIP
   ports:
   - port: 8080
   selector:
-    app: bookinfo-dev-ratings
+    app: {{ .Release.Name }}
