--- a/k8s/helm/templates/ratings-service.yaml
+++ b/k8s/helm/templates/ratings-service.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - port: 8080
+  - port: {{.Values.ratings.port}}
   selector:
     app: {{ .Release.Name }}
